# alfredodinapoli.com

./: .gitignore  404.html  Makefile  README  README.md  SiteCtl.hs  cabal.project  cabal.project.freeze  cabal.sandbox.config  contacts.html  create_draft  cv.html  cv_eu.html  drafts.html  fabfile.py  hireme.html  index.html  oss.html  portfolio.html  posts.html  rss.xml  site.hi  site.hs  stack.yaml  talks.html  website.cabal  whereiam.html
.hsenv_alfredodinapoli.com/: ghc_package_path_var  path_var_prependix
_site/: index.html
app/: Main.hs
code/: Paginator.hs
content/: 404.html  contacts.html  cv.html  hireme.html  index.html  oss.html  portfolio.html  talks.html
css/: .screen.css.swp  bootstrap.css  font-awesome-ie7.css  font-awesome.css  jquery.labeleffect.css  resume.css  screen.css  syntax.css  widget.css
cv/: .cv.markdown.swp  cv.markdown
cv_eu/: cv_eu.html  cv_eu.md
drafts/: 2012-10-17-fast-random-strings-generation-in-haskell.markdown  2013-01-21-category-theory-for-the-working-programmer-part-one.markdown  2018-07-15-recursion-schemes-an-engineering-perspective.html  2018-07-15-recursion-schemes-an-engineering-perspective.lhs  2018-12-24-multiple-concurrent-readers-in-haskell.html  2018-12-24-multiple-concurrent-readers-in-haskell.lhs  blueprint.markdown
gh-pages/: index.html
js/: instant.js  jquery.labeleffect.js  widget.css  widget.js
posts/: 2012-04-02-humbly-simple-fsharp.html  2012-04-02-humbly-simple-fsharp.markdown  2012-07-30-migrating-my-website.html  2012-07-30-migrating-my-website.markdown  2012-07-31-jumped-off-macosx-ship.html  2012-07-31-jumped-off-macosx-ship.markdown  2012-09-12-beware-the-defaulting.html  2012-09-12-beware-the-defaulting.markdown  2012-09-13-getting-serious-about-haskell.html  2012-09-13-getting-serious-about-haskell.markdown  2012-10-04-vim-markmultiple-released.html  2012-10-04-vim-markmultiple-released.markdown  2012-10-17-fun-with-iteratee-io.html  2012-10-17-fun-with-iteratee-io.markdown  2012-10-18-fast-random-strings-generation-in-haskell.html  2012-10-18-fast-random-strings-generation-in-haskell.markdown  2012-10-24-i-love-to-be-a-windows-repairer.html  2012-10-24-i-love-to-be-a-windows-repairer.markdown  2012-10-31-scalaz-for-the-haskell-programmer.html  2012-10-31-scalaz-for-the-haskell-programmer.markdown  2012-12-31-2012-report.html  2012-12-31-2012-report.markdown  2013-01-18-disengage-and-live-better.html  2013-01-18-disengage-and-live-better.markdown  2013-02-10-demand-more-from-your-programming-language.html  (+38 more)
(+1036 files in other folders)
