cabal-version:       3.0
name:                website
version:             2.0.0.0
synopsis:            alfredodinapoli.com static site
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
build-type:          Simple

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Paginator
  build-depends:     base >= 4.18 && < 5,
                     aeson,
                     text,
                     mtl

executable site
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.18 && < 5,
                     hakyll >= 4.16 && < 5

executable site-ctl
  main-is:           SiteCtl.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.18 && < 5,
                     text,
                     process
