cabal-version:       3.0
name:                website
version:             2.0.0.0
synopsis:            alfredodinapoli.com static site
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
build-type:          Simple

executable site
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -threaded
  build-depends:     base >= 4.18 && < 5,
                     blaze-html,
                     directory,
                     filepath,
                     hakyll >= 4.16 && < 5

executable site-ctl
  main-is:           SiteCtl.hs
  default-language:   Haskell2010
  build-depends:     base >= 4.18 && < 5,
                     shelly >= 1.9,
                     text